# rust-kernel

./: Cargo.toml
bare_metal/: Cargo.toml
bare_metal/src/: main.rs  vga_buffer.rs
src/: main.rs
tests/: basic_boot.rs  panic_handler.rs
