[package]
name = "bare_metal"
version = "0.1.0"
authors = ["matlapo <mathieu.lapointe3@mail.mcgill.ca>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.6.0"
volatile = "0.2.3"
spin = "0.4.9"
x86_64 = "0.7.0"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
	"-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"
]
# (0x10 << 1) | 1
test-success-exit-code = 33
# endless loops can occur for various reasons during tests, exit after 5 min
test-timeout = 300
